#9 Moved TimeSpan from Global to Native

--- a/docs/api-reference/CRMScript.Global.Generic.yml
+++ b/docs/api-reference/CRMScript.Global.Generic.yml
@@ -325,7 +325,7 @@ items:
 #      type: CRMScript.Global.Generic
 #      description: The variable to downcast.
 #    return:
-#      type: CRMScript.Global.TimeSpan
+#      type: CRMScript.Native.TimeSpan
 #      description: The variable as a TimeSpan.
 - uid: CRMScript.Global.Generic.GenericToByte(Generic)
   commentId: M:CRMScript.Global.Generic.GenericToByte(Generic)
