--- a/docs/api-reference/CRMScript.Native.TimeSpan.yml
+++ b/docs/api-reference/CRMScript.Native.TimeSpan.yml
@@ -1,60 +1,60 @@
 ### YamlMime:ManagedReference
 items:
-- uid: CRMScript.Global.TimeSpan
-  commentId: T:CRMScript.Global.TimeSpan
+- uid: CRMScript.Native.TimeSpan
+  commentId: T:CRMScript.Native.TimeSpan
   id: TimeSpan
   langs:
   - crmscript
   children:
-  - CRMScript.Global.TimeSpan.#ctor
-  - CRMScript.Global.TimeSpan.addDay(Integer)
-  - CRMScript.Global.TimeSpan.addHour(Integer)
-  - CRMScript.Global.TimeSpan.addMin(Integer)
-  - CRMScript.Global.TimeSpan.addSec(Integer)
-  - CRMScript.Global.TimeSpan.addYear(Integer)
-  - CRMScript.Global.TimeSpan.getDay()
-  - CRMScript.Global.TimeSpan.getHour()
-  - CRMScript.Global.TimeSpan.getMin()
-  - CRMScript.Global.TimeSpan.getSec()
-  - CRMScript.Global.TimeSpan.getYear()
-  - CRMScript.Global.TimeSpan.isNegative()
-  - CRMScript.Global.TimeSpan.set(Integer,Integer,Integer,Integer,Integer)
-  - CRMScript.Global.TimeSpan.setNegative(Bool)
-  - CRMScript.Global.TimeSpan.toDays()
-  - CRMScript.Global.TimeSpan.toHours()
-  - CRMScript.Global.TimeSpan.toMinutes()
-  - CRMScript.Global.TimeSpan.toSeconds()
-  - CRMScript.Global.TimeSpan.toString(Integer,Integer,Integer,Bool)
+  - CRMScript.Native.TimeSpan.#ctor
+  - CRMScript.Native.TimeSpan.addDay(Integer)
+  - CRMScript.Native.TimeSpan.addHour(Integer)
+  - CRMScript.Native.TimeSpan.addMin(Integer)
+  - CRMScript.Native.TimeSpan.addSec(Integer)
+  - CRMScript.Native.TimeSpan.addYear(Integer)
+  - CRMScript.Native.TimeSpan.getDay()
+  - CRMScript.Native.TimeSpan.getHour()
+  - CRMScript.Native.TimeSpan.getMin()
+  - CRMScript.Native.TimeSpan.getSec()
+  - CRMScript.Native.TimeSpan.getYear()
+  - CRMScript.Native.TimeSpan.isNegative()
+  - CRMScript.Native.TimeSpan.set(Integer,Integer,Integer,Integer,Integer)
+  - CRMScript.Native.TimeSpan.setNegative(Bool)
+  - CRMScript.Native.TimeSpan.toDays()
+  - CRMScript.Native.TimeSpan.toHours()
+  - CRMScript.Native.TimeSpan.toMinutes()
+  - CRMScript.Native.TimeSpan.toSeconds()
+  - CRMScript.Native.TimeSpan.toString(Integer,Integer,Integer,Bool)
   name: TimeSpan
   nameWithType: TimeSpan
-  fullName: CRMScript.Global.TimeSpan
+  fullName: CRMScript.Native.TimeSpan
   type: Class
   summary: "\nA class for representing a time span.\n"
   example: 
-- uid: CRMScript.Global.TimeSpan.#ctor
-  commentId: M:CRMScript.Global.TimeSpan.#ctor
+- uid: CRMScript.Native.TimeSpan.#ctor
+  commentId: M:CRMScript.Native.TimeSpan.#ctor
   id: '#ctor'
   so.intellisense: Void.TimeSpan
   langs:
   - crmscript
   name: '#ctor'
   nameWithType: TimeSpan.#ctor
-  fullName: CRMScript.Global.TimeSpan.#ctor
+  fullName: CRMScript.Native.TimeSpan.#ctor
   type: Constructor
   summary: "\nInitializes a new instance of the TimeSpan class.\n"
   remarks: 
   syntax: 
     content: TimeSpan
   example: 
-- uid: CRMScript.Global.TimeSpan.addDay(Integer)
-  commentId: M:CRMScript.Global.TimeSpan.addDay(Integer)
+- uid: CRMScript.Native.TimeSpan.addDay(Integer)
+  commentId: M:CRMScript.Native.TimeSpan.addDay(Integer)
   id: 'addDay(Integer)'
   so.intellisense: TimeSpan.addDay
   langs:
   - crmscript
   name: 'addDay(Integer)'
   nameWithType: TimeSpan.addDay(Integer)
-  fullName: CRMScript.Global.TimeSpan.addDay(Integer)
+  fullName: CRMScript.Native.TimeSpan.addDay(Integer)
   type: Method
   summary: "\nAdds the given number of days to the currently set time span.\n"
   remarks: 
@@ -68,15 +68,15 @@ items:
       type: CRMScript.Global.Void
       description:
   example: 
-- uid: CRMScript.Global.TimeSpan.addHour(Integer)
-  commentId: M:CRMScript.Global.TimeSpan.addHour(Integer)
+- uid: CRMScript.Native.TimeSpan.addHour(Integer)
+  commentId: M:CRMScript.Native.TimeSpan.addHour(Integer)
   id: 'addHour(Integer)'
   so.intellisense: TimeSpan.addHour
   langs:
   - crmscript
   name: 'addHour(Integer)'
   nameWithType: TimeSpan.addHour(Integer)
-  fullName: CRMScript.Global.TimeSpan.addHour(Integer)
+  fullName: CRMScript.Native.TimeSpan.addHour(Integer)
   type: Method
   summary: "\nAdds the given number of hours to the currently set time span.\n"
   remarks: 
@@ -90,15 +90,15 @@ items:
       type: CRMScript.Global.Void
       description:
   example: 
-- uid: CRMScript.Global.TimeSpan.addMin(Integer)
-  commentId: M:CRMScript.Global.TimeSpan.addMin(Integer)
+- uid: CRMScript.Native.TimeSpan.addMin(Integer)
+  commentId: M:CRMScript.Native.TimeSpan.addMin(Integer)
   id: 'addMin(Integer)'
   so.intellisense: TimeSpan.addMin
   langs:
   - crmscript
   name: 'addMin(Integer)'
   nameWithType: TimeSpan.addMin(Integer)
-  fullName: CRMScript.Global.TimeSpan.addMin(Integer)
+  fullName: CRMScript.Native.TimeSpan.addMin(Integer)
   type: Method
   summary: "\nAdds the given number of minutes to the currently set time span.\n"
   remarks: 
@@ -112,15 +112,15 @@ items:
       type: CRMScript.Global.Void
       description:
   example: 
-- uid: CRMScript.Global.TimeSpan.addSec(Integer)
-  commentId: M:CRMScript.Global.TimeSpan.addSec(Integer)
+- uid: CRMScript.Native.TimeSpan.addSec(Integer)
+  commentId: M:CRMScript.Native.TimeSpan.addSec(Integer)
   id: 'addSec(Integer)'
   so.intellisense: TimeSpan.addSec
   langs:
   - crmscript
   name: 'addSec(Integer)'
   nameWithType: TimeSpan.addSec(Integer)
-  fullName: CRMScript.Global.TimeSpan.addSec(Integer)
+  fullName: CRMScript.Native.TimeSpan.addSec(Integer)
   type: Method
   summary: "\nAdds the given number of seconds to the currently set time span.\n"
   remarks: 
@@ -134,15 +134,15 @@ items:
       type: CRMScript.Global.Void
       description:
   example: 
-- uid: CRMScript.Global.TimeSpan.addYear(Integer)
-  commentId: M:CRMScript.Global.TimeSpan.addYear(Integer)
+- uid: CRMScript.Native.TimeSpan.addYear(Integer)
+  commentId: M:CRMScript.Native.TimeSpan.addYear(Integer)
   id: 'addYear(Integer)'
   so.intellisense: TimeSpan.addYear
   langs:
   - crmscript
   name: 'addYear(Integer)'
   nameWithType: TimeSpan.addYear(Integer)
-  fullName: CRMScript.Global.TimeSpan.addYear(Integer)
+  fullName: CRMScript.Native.TimeSpan.addYear(Integer)
   type: Method
   summary: "\nAdds the given number of years to the currently set time span.\n"
   remarks: 
@@ -156,15 +156,15 @@ items:
       type: CRMScript.Global.Void
       description:
   example: 
-- uid: CRMScript.Global.TimeSpan.getDay()
-  commentId: M:CRMScript.Global.TimeSpan.getDay()
+- uid: CRMScript.Native.TimeSpan.getDay()
+  commentId: M:CRMScript.Native.TimeSpan.getDay()
   id: 'getDay()'
   so.intellisense: TimeSpan.getDay
   langs:
   - crmscript
   name: 'getDay()'
   nameWithType: TimeSpan.getDay()
-  fullName: CRMScript.Global.TimeSpan.getDay()
+  fullName: CRMScript.Native.TimeSpan.getDay()
   type: Method
   summary: "\nReturns the day field of the time span as an integer.\n"
   remarks: 
@@ -175,15 +175,15 @@ items:
       type: CRMScript.Global.Integer
       description: Day field as an integer
   example: 
-- uid: CRMScript.Global.TimeSpan.getHour()
-  commentId: M:CRMScript.Global.TimeSpan.getHour()
+- uid: CRMScript.Native.TimeSpan.getHour()
+  commentId: M:CRMScript.Native.TimeSpan.getHour()
   id: 'getHour()'
   so.intellisense: TimeSpan.getHour
   langs:
   - crmscript
   name: 'getHour()'
   nameWithType: TimeSpan.getHour()
-  fullName: CRMScript.Global.TimeSpan.getHour()
+  fullName: CRMScript.Native.TimeSpan.getHour()
   type: Method
   summary: "\nReturns the hour field of the time span as an integer.\n"
   remarks: 
@@ -194,15 +194,15 @@ items:
       type: CRMScript.Global.Integer
       description:
   example: 
-- uid: CRMScript.Global.TimeSpan.getMin()
-  commentId: M:CRMScript.Global.TimeSpan.getMin()
+- uid: CRMScript.Native.TimeSpan.getMin()
+  commentId: M:CRMScript.Native.TimeSpan.getMin()
   id: 'getMin()'
   so.intellisense: TimeSpan.getMin
   langs:
   - crmscript
   name: 'getMin()'
   nameWithType: TimeSpan.getMin()
-  fullName: CRMScript.Global.TimeSpan.getMin()
+  fullName: CRMScript.Native.TimeSpan.getMin()
   type: Method
   summary: "\nReturns the minute field of the time span as an integer.\n"
   remarks: 
@@ -213,15 +213,15 @@ items:
       type: CRMScript.Global.Integer
       description:
   example: 
-- uid: CRMScript.Global.TimeSpan.getSec()
-  commentId: M:CRMScript.Global.TimeSpan.getSec()
+- uid: CRMScript.Native.TimeSpan.getSec()
+  commentId: M:CRMScript.Native.TimeSpan.getSec()
   id: 'getSec()'
   so.intellisense: TimeSpan.getSec
   langs:
   - crmscript
   name: 'getSec()'
   nameWithType: TimeSpan.getSec()
-  fullName: CRMScript.Global.TimeSpan.getSec()
+  fullName: CRMScript.Native.TimeSpan.getSec()
   type: Method
   summary: "\nReturns the seconds field of the time span as an integer.\n"
   remarks: 
@@ -232,15 +232,15 @@ items:
       type: CRMScript.Global.Void
       description:
   example: 
-- uid: CRMScript.Global.TimeSpan.getYear()
-  commentId: M:CRMScript.Global.TimeSpan.getYear()
+- uid: CRMScript.Native.TimeSpan.getYear()
+  commentId: M:CRMScript.Native.TimeSpan.getYear()
   id: 'getYear()'
   so.intellisense: TimeSpan.getYear
   langs:
   - crmscript
   name: 'getYear()'
   nameWithType: TimeSpan.getYear()
-  fullName: CRMScript.Global.TimeSpan.getYear()
+  fullName: CRMScript.Native.TimeSpan.getYear()
   type: Method
   summary: "\nReturns the year field of the time span as an integer.\n"
   remarks: 
@@ -251,15 +251,15 @@ items:
       type: CRMScript.Global.Integer
       description:
   example: 
-- uid: CRMScript.Global.TimeSpan.isNegative()
-  commentId: M:CRMScript.Global.TimeSpan.isNegative()
+- uid: CRMScript.Native.TimeSpan.isNegative()
+  commentId: M:CRMScript.Native.TimeSpan.isNegative()
   id: 'isNegative()'
   so.intellisense: TimeSpan.isNegative
   langs:
   - crmscript
   name: 'isNegative()'
   nameWithType: TimeSpan.isNegative()
-  fullName: CRMScript.Global.TimeSpan.isNegative()
+  fullName: CRMScript.Native.TimeSpan.isNegative()
   type: Method
   summary: "\nChecks if this is a negative time span.\n"
   remarks: 
@@ -270,15 +270,15 @@ items:
       type: CRMScript.Global.Bool
       description: true if this is a negative time span; otherwise, false
   example: 
-- uid: CRMScript.Global.TimeSpan.set(Integer,Integer,Integer,Integer,Integer)
-  commentId: M:CRMScript.Global.TimeSpan.set(Integer,Integer,Integer,Integer,Integer)
+- uid: CRMScript.Native.TimeSpan.set(Integer,Integer,Integer,Integer,Integer)
+  commentId: M:CRMScript.Native.TimeSpan.set(Integer,Integer,Integer,Integer,Integer)
   id: 'set(Integer,Integer,Integer,Integer,Integer)'
   so.intellisense: TimeSpan.set
   langs:
   - crmscript
   name: 'set(Integer,Integer,Integer,Integer,Integer)'
   nameWithType: TimeSpan.set(Integer,Integer,Integer,Integer,Integer)
-  fullName: CRMScript.Global.TimeSpan.set(Integer,Integer,Integer,Integer,Integer)
+  fullName: CRMScript.Native.TimeSpan.set(Integer,Integer,Integer,Integer,Integer)
   type: Method
   summary: "\nInitializes a time span object.\n"
   remarks: 
@@ -304,15 +304,15 @@ items:
       type: CRMScript.Global.Void
       description:
   example: 
-- uid: CRMScript.Global.TimeSpan.setNegative(Bool)
-  commentId: M:CRMScript.Global.TimeSpan.setNegative(Bool)
+- uid: CRMScript.Native.TimeSpan.setNegative(Bool)
+  commentId: M:CRMScript.Native.TimeSpan.setNegative(Bool)
   id: 'setNegative(Bool)'
   so.intellisense: TimeSpan.setNegative
   langs:
   - crmscript
   name: 'setNegative(Bool)'
   nameWithType: TimeSpan.setNegative(Bool)
-  fullName: CRMScript.Global.TimeSpan.setNegative(Bool)
+  fullName: CRMScript.Native.TimeSpan.setNegative(Bool)
   type: Method
   summary: "\nPositive time span is default, but if you add a negative number of years/days/hours/minutes/seconds, you may get a negative times pan.\n"
   remarks: 
@@ -326,15 +326,15 @@ items:
       type: CRMScript.Global.Void
       description:
   example: 
-- uid: CRMScript.Global.TimeSpan.toDays()
-  commentId: M:CRMScript.Global.TimeSpan.toDays()
+- uid: CRMScript.Native.TimeSpan.toDays()
+  commentId: M:CRMScript.Native.TimeSpan.toDays()
   id: 'toDays()'
   so.intellisense: TimeSpan.toDays
   langs:
   - crmscript
   name: 'toDays()'
   nameWithType: TimeSpan.toDays()
-  fullName: CRMScript.Global.TimeSpan.toDays()
+  fullName: CRMScript.Native.TimeSpan.toDays()
   type: Method
   summary: "\nReturns the time span as a number of days. A one year time span will return 365.\n"
   remarks: 
@@ -345,15 +345,15 @@ items:
       type: CRMScript.Global.Integer
       description:
   example: 
-- uid: CRMScript.Global.TimeSpan.toHours()
-  commentId: M:CRMScript.Global.TimeSpan.toHours()
+- uid: CRMScript.Native.TimeSpan.toHours()
+  commentId: M:CRMScript.Native.TimeSpan.toHours()
   id: 'toHours()'
   so.intellisense: TimeSpan.toHours
   langs:
   - crmscript
   name: 'toHours()'
   nameWithType: TimeSpan.toHours()
-  fullName: CRMScript.Global.TimeSpan.toHours()
+  fullName: CRMScript.Native.TimeSpan.toHours()
   type: Method
   summary: "\nReturns the time span as a number of hours. A one day time span will return 24.\n"
   remarks: 
@@ -364,15 +364,15 @@ items:
       type: CRMScript.Global.Integer
       description:
   example: 
-- uid: CRMScript.Global.TimeSpan.toMinutes()
-  commentId: M:CRMScript.Global.TimeSpan.toMinutes()
+- uid: CRMScript.Native.TimeSpan.toMinutes()
+  commentId: M:CRMScript.Native.TimeSpan.toMinutes()
   id: 'toMinutes()'
   so.intellisense: TimeSpan.toMinutes
   langs:
   - crmscript
   name: 'toMinutes()'
   nameWithType: TimeSpan.toMinutes()
-  fullName: CRMScript.Global.TimeSpan.toMinutes()
+  fullName: CRMScript.Native.TimeSpan.toMinutes()
   type: Method
   summary: "\nReturns the time span as a number of minutes. A one hour time span will return 60.\n"
   remarks: 
@@ -383,15 +383,15 @@ items:
       type: CRMScript.Global.Integer
       description:
   example: 
-- uid: CRMScript.Global.TimeSpan.toSeconds()
-  commentId: M:CRMScript.Global.TimeSpan.toSeconds()
+- uid: CRMScript.Native.TimeSpan.toSeconds()
+  commentId: M:CRMScript.Native.TimeSpan.toSeconds()
   id: 'toSeconds()'
   so.intellisense: TimeSpan.toSeconds
   langs:
   - crmscript
   name: 'toSeconds()'
   nameWithType: TimeSpan.toSeconds()
-  fullName: CRMScript.Global.TimeSpan.toSeconds()
+  fullName: CRMScript.Native.TimeSpan.toSeconds()
   type: Method
   summary: "\nReturns the time span as a number of seconds. A one minute time span will return 60.\n"
   remarks: 
@@ -402,15 +402,15 @@ items:
       type: CRMScript.Global.Integer
       description:
   example: 
-- uid: CRMScript.Global.TimeSpan.toString(Integer,Integer,Integer,Bool)
-  commentId: M:CRMScript.Global.TimeSpan.toString(Integer,Integer,Integer,Bool)
+- uid: CRMScript.Native.TimeSpan.toString(Integer,Integer,Integer,Bool)
+  commentId: M:CRMScript.Native.TimeSpan.toString(Integer,Integer,Integer,Bool)
   id: 'toString(Integer,Integer,Integer,Bool)'
   so.intellisense: TimeSpan.toString
   langs:
   - crmscript
   name: 'toString(Integer,Integer,Integer,Bool)'
   nameWithType: TimeSpan.toString(Integer,Integer,Integer,Bool)
-  fullName: CRMScript.Global.TimeSpan.toString(Integer,Integer,Integer,Bool)
+  fullName: CRMScript.Native.TimeSpan.toString(Integer,Integer,Integer,Bool)
   type: Method
   summary: # TODO
   remarks: 
@@ -435,12 +435,12 @@ items:
   example: 
   - "\n<pre><code>TimeSpan ts;\nprintLine(ts.toString(3,1,1,false));</code></pre>\n"
 references:
-- uid: CRMScript.Global.TimeSpan
-  commentId: T:CRMScript.Global.TimeSpan
+- uid: CRMScript.Native.TimeSpan
+  commentId: T:CRMScript.Native.TimeSpan
   isExternal: true
   name: TimeSpan
   nameWithType: TimeSpan
-  fullName: CRMScript.Global.TimeSpan
+  fullName: CRMScript.Native.TimeSpan
 - uid: CRMScript.Global.Integer
   commentId: T:CRMScript.Global.Integer
   isExternal: true
