--- a/docs/api-reference/CRMScript.Native.YearSchedule.yml
+++ b/docs/api-reference/CRMScript.Native.YearSchedule.yml
@@ -50,7 +50,7 @@ items:
       type: CRMScript.Global.DateTime
       description: Start time for calculation
     - id: sp
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: The timespan to add (2 days, 1 hours, 5 minutes, 30 seconds...)
     return:
       type: CRMScript.Global.DateTime
@@ -106,7 +106,7 @@ items:
         type: CRMScript.Global.DateTime
         description: Count to this date
     return:
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description:
   example: 
 references:
@@ -134,12 +134,12 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
-- uid: CRMScript.Global.TimeSpan
-  commentId: T:CRMScript.Global.TimeSpan
+- uid: CRMScript.Native.TimeSpan
+  commentId: T:CRMScript.Native.TimeSpan
   isExternal: true
   name: TimeSpan
   nameWithType: TimeSpan
-  fullName: CRMScript.Global.TimeSpan
+  fullName: CRMScript.Native.TimeSpan
 - uid: CRMScript.Global.DateTime
   commentId: T:CRMScript.Global.DateTime
   isExternal: true
