--- a/docs/api-reference/CRMScript.Native.yml
+++ b/docs/api-reference/CRMScript.Native.yml
@@ -51,6 +51,7 @@ items:
   - CRMScript.Native.StringMatrix
   - CRMScript.Native.Ticket
   - CRMScript.Native.Timer
+  - CRMScript.Native.TimeSpan
   - CRMScript.Native.TimeZone
   - CRMScript.Native.User
   - CRMScript.Native.WeekSchedule
@@ -336,6 +337,12 @@ references:
   name: Timer
   nameWithType: Timer
   fullName: CRMScript.Native.Timer
+- uid: CRMScript.Native.TimeSpan
+  commentId: T:CRMScript.Native.TimeSpan
+  isExternal: true
+  name: TimeSpan
+  nameWithType: TimeSpan
+  fullName: CRMScript.Native.TimeSpan
 - uid: CRMScript.Native.TimeZone
   commentId: T:CRMScript.Native.TimeZone
   isExternal: true
