--- a/docs/api-reference/CRMScript.NetServer.NSAppointment.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAppointment.yml
@@ -166,7 +166,7 @@ items:
     content: TimeSpan GetAlarmLeadTime()
     parameters: []
     return:
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: Alarm lead time.
   example: 
   - "\n<pre><code>NSAppointment thing;\nTimeSpan alarmLeadTime = thing.GetAlarmLeadTime();</code></pre>\n"
@@ -1186,7 +1186,7 @@ items:
     content: Void SetAlarmLeadTime(TimeSpan alarmLeadTime)
     parameters:
     - id: alarmLeadTime
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: Alarm lead time.
     return:
       type: CRMScript.Global.Void
@@ -2281,12 +2281,12 @@ references:
   name: DateTime
   nameWithType: DateTime
   fullName: CRMScript.Global.DateTime
-- uid: CRMScript.Global.TimeSpan
-  commentId: T:CRMScript.Global.TimeSpan
+- uid: CRMScript.Native.TimeSpan
+  commentId: T:CRMScript.Native.TimeSpan
   isExternal: true
   name: TimeSpan
   nameWithType: TimeSpan
-  fullName: CRMScript.Global.TimeSpan
+  fullName: CRMScript.Native.TimeSpan
 - uid: CRMScript.Global.Integer
   commentId: T:CRMScript.Global.Integer
   isExternal: true
