--- a/docs/api-reference/CRMScript.NetServer.NSAppointmentEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAppointmentEntity.yml
@@ -198,7 +198,7 @@ items:
     content: TimeSpan GetAlarmLeadTime()
     parameters: []
     return:
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: Alarm lead time.
   example: 
   - "\n<pre><code>NSAppointmentEntity thing;\nTimeSpan alarmLeadTime = thing.GetAlarmLeadTime();</code></pre>\n"
@@ -755,7 +755,7 @@ items:
     content: TimeSpan GetLagTime()
     parameters: []
     return:
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: as leadtime, but after the end - time blocked for travel and so on
   example: 
   - "\n<pre><code>NSAppointmentEntity thing;\nTimeSpan lagTime = thing.GetLagTime();</code></pre>\n"
@@ -775,7 +775,7 @@ items:
     content: TimeSpan GetLeadTime()
     parameters: []
     return:
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: Time blocked (minutes) BEFORE starttime
   example: 
   - "\n<pre><code>NSAppointmentEntity thing;\nTimeSpan leadTime = thing.GetLeadTime();</code></pre>\n"
@@ -1336,7 +1336,7 @@ items:
     content: Void SetAlarmLeadTime(TimeSpan alarmLeadTime)
     parameters:
     - id: alarmLeadTime
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: Alarm lead time.
     return:
       type: CRMScript.Global.Void
@@ -1949,7 +1949,7 @@ items:
     content: Void SetLagTime(TimeSpan lagTime)
     parameters:
     - id: lagTime
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: as leadtime, but after the end -  time blocked for travel and so on
     return:
       type: CRMScript.Global.Void
@@ -1971,7 +1971,7 @@ items:
     content: Void SetLeadTime(TimeSpan leadTime)
     parameters: 
     - id: leadTime
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: Time blocked (minutes) BEFORE starttime
     return:
       type: CRMScript.Global.Void
@@ -2541,12 +2541,12 @@ references:
   name: Integer
   nameWithType: Integer
   fullName: CRMScript.Global.Integer
-- uid: CRMScript.Global.TimeSpan
-  commentId: T:CRMScript.Global.TimeSpan
+- uid: CRMScript.Native.TimeSpan
+  commentId: T:CRMScript.Native.TimeSpan
   isExternal: true
   name: TimeSpan
   nameWithType: TimeSpan
-  fullName: CRMScript.Global.TimeSpan
+  fullName: CRMScript.Native.TimeSpan
 - uid: CRMScript.NetServer.NSAssociate
   commentId: T:CRMScript.NetServer.NSAssociate
   isExternal: true
