--- a/docs/api-reference/CRMScript.NetServer.NSChatOpeningHours.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChatOpeningHours.yml
@@ -108,7 +108,7 @@ items:
     content: TimeSpan GetFriStart()
     parameters: []
     return:
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: When opening hours start on Fridays. Only time-part is used.
   example: 
   - "\n<pre><code>NSChatOpeningHours thing;\nTimeSpan friStart = thing.GetFriStart();</code></pre>\n"
@@ -128,7 +128,7 @@ items:
     content: TimeSpan GetFriStop()
     parameters: []
     return:
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: When opening hours stop on Fridays. Only time-part is used.
   example: 
   - "\n<pre><code>NSChatOpeningHours thing;\nTimeSpan friStop = thing.GetFriStop();</code></pre>\n"
@@ -168,7 +168,7 @@ items:
     content: TimeSpan GetMonStart()
     parameters: []
     return:
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: When opening hours start on Mondays. Only time-part is used.
   example: 
   - "\n<pre><code>NSChatOpeningHours thing;\nTimeSpan monStart = thing.GetMonStart();</code></pre>\n"
@@ -188,7 +188,7 @@ items:
     content: TimeSpan GetMonStop()
     parameters: []
     return:
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: When opening hours stop on Mondays. Only time-part is used.
   example: 
   - "\n<pre><code>NSChatOpeningHours thing;\nTimeSpan monStop = thing.GetMonStop();</code></pre>\n"
@@ -228,7 +228,7 @@ items:
     content: TimeSpan GetSatStart()
     parameters: []
     return:
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: When opening hours start on Saturdays. Only time-part is used.
   example: 
   - "\n<pre><code>NSChatOpeningHours thing;\nTimeSpan satStart = thing.GetSatStart();</code></pre>\n"
@@ -248,7 +248,7 @@ items:
     content: TimeSpan GetSatStop()
     parameters: []
     return:
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: When opening hours stop on Saturdays. Only time-part is used.
   example: 
   - "\n<pre><code>NSChatOpeningHours thing;\nTimeSpan satStop = thing.GetSatStop();</code></pre>\n"
@@ -288,7 +288,7 @@ items:
     content: TimeSpan GetSunStart()
     parameters: []
     return:
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: When opening hours start on Sundays. Only time-part is used.
   example: 
   - "\n<pre><code>NSChatOpeningHours thing;\nTimeSpan sunStart = thing.GetSunStart();</code></pre>\n"
@@ -308,7 +308,7 @@ items:
     content: TimeSpan GetSunStop()
     parameters: []
     return:
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: When opening hours stop on Sundays. Only time-part is used.
   example: 
   - "\n<pre><code>NSChatOpeningHours thing;\nTimeSpan sunStop = thing.GetSunStop();</code></pre>\n"
@@ -348,7 +348,7 @@ items:
     content: TimeSpan GetThuStart()
     parameters: []
     return:
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: When opening hours start on Thursdays. Only time-part is used.
   example: 
   - "\n<pre><code>NSChatOpeningHours thing;\nTimeSpan thuStart = thing.GetThuStart();</code></pre>\n"
@@ -368,7 +368,7 @@ items:
     content: TimeSpan GetThuStop()
     parameters: []
     return:
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: When opening hours stop on Thursdays. Only time-part is used.
   example: 
   - "\n<pre><code>NSChatOpeningHours thing;\nTimeSpan thuStop = thing.GetThuStop();</code></pre>\n"
@@ -408,7 +408,7 @@ items:
     content: TimeSpan GetTueStart()
     parameters: []
     return:
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: When opening hours start on Tuesdays. Only time-part is used.
   example: 
   - "\n<pre><code>NSChatOpeningHours thing;\nTimeSpan tueStart = thing.GetTueStart();</code></pre>\n"
@@ -428,7 +428,7 @@ items:
     content: TimeSpan GetTueStop()
     parameters: []
     return:
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: When opening hours stop on Tuesdays. Only time-part is used.
   example: 
   - "\n<pre><code>NSChatOpeningHours thing;\nTimeSpan tueStop = thing.GetTueStop();</code></pre>\n"
@@ -488,7 +488,7 @@ items:
     content: TimeSpan GetWedStart()
     parameters: []
     return:
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: When opening hours start on Wednesdays. Only time-part is used.
   example: 
   - "\n<pre><code>NSChatOpeningHours thing;\nTimeSpan wedStart = thing.GetWedStart();</code></pre>\n"
@@ -508,7 +508,7 @@ items:
     content: TimeSpan GetWedStop()
     parameters: []
     return:
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: When opening hours stop on Wednesday. Only time-part is used.
   example: 
   - "\n<pre><code>NSChatOpeningHours thing;\nTimeSpan wedStop = thing.GetWedStop();</code></pre>\n"
@@ -550,7 +550,7 @@ items:
     content: Void SetFriStart(TimeSpan friStart)
     parameters:
     - id: friStart
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: When opening hours start on Fridays. Only time-part is used.
     return:
       type: CRMScript.Global.Void
@@ -572,7 +572,7 @@ items:
     content: Void SetFriStop(TimeSpan friStop)
     parameters:
     - id: friStop
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: When opening hours stop on Fridays. Only time-part is used.
     return:
       type: CRMScript.Global.Void
@@ -616,7 +616,7 @@ items:
     content: Void SetMonStart(TimeSpan monStart)
     parameters:
     - id: monStart
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: When opening hours start on Mondays. Only time-part is used.
     return:
       type: CRMScript.Global.Void
@@ -638,7 +638,7 @@ items:
     content: Void SetMonStop(TimeSpan monStop)
     parameters:
     - id: monStop
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: When opening hours stop on Mondays. Only time-part is used.
     return:
       type: CRMScript.Global.Void
@@ -682,7 +682,7 @@ items:
     content: Void SetSatStart(TimeSpan satStart)
     parameters:
     - id: satStart
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: When opening hours start on Saturdays. Only time-part is used.
     return:
       type: CRMScript.Global.Void
@@ -704,7 +704,7 @@ items:
     content: Void SetSatStop(TimeSpan satStop)
     parameters:
     - id: satStop
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: When opening hours stop on Saturdays. Only time-part is used.
     return:
       type: CRMScript.Global.Void
@@ -748,7 +748,7 @@ items:
     content: Void SetSunStart(TimeSpan sunStart)
     parameters:
     - id: sunStart
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: When opening hours start on Sundays. Only time-part is used.
     return:
       type: CRMScript.Global.Void
@@ -770,7 +770,7 @@ items:
     content: Void SetSunStop(TimeSpan sunStop)
     parameters:
     - id: sunStop
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: When opening hours stop on Sundays. Only time-part is used.
     return:
       type: CRMScript.Global.Void
@@ -814,7 +814,7 @@ items:
     content: Void SetThuStart(TimeSpan thuStart)
     parameters:
     - id: thuStart
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: When opening hours start on Thursdays. Only time-part is used.
     return:
       type: CRMScript.Global.Void
@@ -836,7 +836,7 @@ items:
     content: Void SetThuStop(TimeSpan thuStop)
     parameters:
     - id: thuStop
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: When opening hours stop on Thursdays. Only time-part is used.
     return:
       type: CRMScript.Global.Void
@@ -880,7 +880,7 @@ items:
     content: Void SetTueStart(TimeSpan tueStart)
     parameters:
     - id: tueStart
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: When opening hours start on Tuesdays. Only time-part is used.
     return:
       type: CRMScript.Global.Void
@@ -902,7 +902,7 @@ items:
     content: Void SetTueStop(TimeSpan tueStop)
     parameters:
     - id: tueStop
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: When opening hours stop on Tuesdays. Only time-part is used.
     return:
       type: CRMScript.Global.Void
@@ -968,7 +968,7 @@ items:
     content: Void SetWedStart(TimeSpan wedStart)
     parameters:
     - id: wedStart
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: When opening hours start on Wednesdays. Only time-part is used.
     return:
       type: CRMScript.Global.Void
@@ -990,7 +990,7 @@ items:
     content: Void SetWedStop(TimeSpan wedStop)
     parameters:
     - id: wedStop
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: When opening hours stop on Wednesday. Only time-part is used.
     return:
       type: CRMScript.Global.Void
@@ -1009,12 +1009,12 @@ references:
   name: Bool
   nameWithType: Bool
   fullName: CRMScript.Global.Bool
-- uid: CRMScript.Global.TimeSpan
-  commentId: T:CRMScript.Global.TimeSpan
+- uid: CRMScript.Native.TimeSpan
+  commentId: T:CRMScript.Native.TimeSpan
   isExternal: true
   name: TimeSpan
   nameWithType: TimeSpan
-  fullName: CRMScript.Global.TimeSpan
+  fullName: CRMScript.Native.TimeSpan
 - uid: CRMScript.NetServer.NSTimeZoneData
   commentId: T:CRMScript.NetServer.NSTimeZoneData
   isExternal: true
