--- a/docs/api-reference/CRMScript.NetServer.NSPocketNotificationMessage.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPocketNotificationMessage.yml
@@ -84,7 +84,7 @@ items:
     content: TimeSpan GetDuration()
     parameters: []
     return:
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: Specify duration of the event
   example: 
   - "\n<pre><code>NSPocketNotificationMessage thing;\nTimeSpan duration = thing.GetDuration();</code></pre>\n"
@@ -286,7 +286,7 @@ items:
     content: Void SetDuration(TimeSpan duration)
     parameters:
     - id: duration
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: Specify duration of the event
     return:
       type: CRMScript.Global.Void
@@ -481,12 +481,12 @@ references:
   name: DateTime
   nameWithType: DateTime
   fullName: CRMScript.Global.DateTime
-- uid: CRMScript.Global.TimeSpan
-  commentId: T:CRMScript.Global.TimeSpan
+- uid: CRMScript.Native.TimeSpan
+  commentId: T:CRMScript.Native.TimeSpan
   isExternal: true
   name: TimeSpan
   nameWithType: TimeSpan
-  fullName: CRMScript.Global.TimeSpan
+  fullName: CRMScript.Native.TimeSpan
 - uid: CRMScript.Global.Map
   commentId: T:CRMScript.Global.Map
   isExternal: true
