--- a/docs/api-reference/CRMScript.NetServer.NSSuggestedAppointmentEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSuggestedAppointmentEntity.yml
@@ -152,7 +152,7 @@ items:
     content: TimeSpan GetDuration()
     parameters: []
     return:
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: Duration in minutes of suggested appointment
   example: 
   - "\n<pre><code>NSSuggestedAppointmentEntity thing;\nTimeSpan duration = thing.GetDuration();</code></pre>\n"
@@ -440,7 +440,7 @@ items:
     content: Void SetDuration(TimeSpan duration)
     parameters:
     - id: duration
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: Duration in minutes of suggested appointment
     return:
       type: CRMScript.Global.Void
@@ -663,12 +663,12 @@ references:
   name: Integer
   nameWithType: Integer
   fullName: CRMScript.Global.Integer
-- uid: CRMScript.Global.TimeSpan
-  commentId: T:CRMScript.Global.TimeSpan
+- uid: CRMScript.Native.TimeSpan
+  commentId: T:CRMScript.Native.TimeSpan
   isExternal: true
   name: TimeSpan
   nameWithType: TimeSpan
-  fullName: CRMScript.Global.TimeSpan
+  fullName: CRMScript.Native.TimeSpan
 - uid: CRMScript.Global.String
   commentId: T:CRMScript.Global.String
   isExternal: true
