--- a/docs/api-reference/toc.yml
+++ b/docs/api-reference/toc.yml
@@ -28,8 +28,6 @@ items:
     href: CRMScript.Global.String.yml
   - name: Time
     href: CRMScript.Global.Time.yml
-  - name: TimeSpan
-    href: CRMScript.Global.TimeSpan.yml
   - name: Vector
     href: CRMScript.Global.Vector.yml
   - name: XMLNode
@@ -127,6 +125,8 @@ items:
     href: CRMScript.Native.Ticket.yml
   - name: Timer
     href: CRMScript.Native.Timer.yml
+  - name: TimeSpan
+    href: CRMScript.Native.TimeSpan.yml
   - name: TimeZone
     href: CRMScript.Native.TimeZone.yml
   - name: User
