--- a/docs/api-reference/CRMScript.Native.WeekSchedule.yml
+++ b/docs/api-reference/CRMScript.Native.WeekSchedule.yml
@@ -80,7 +80,7 @@ items:
       type: CRMScript.Global.DateTime
       description: Start time for calculation
     - id: add
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description: The time span to add (2 days, 1 hours, 5 minutes, 30 seconds...)
     return:
       type: CRMScript.Native.DateTime
@@ -108,7 +108,7 @@ items:
       type: CRMScript.Global.DateTime
       description: Stop time for calculation
     return:
-      type: CRMScript.Global.TimeSpan
+      type: CRMScript.Native.TimeSpan
       description:
   example: 
 - uid: CRMScript.Native.WeekSchedule.getFriStart()
@@ -776,9 +776,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
-- uid: CRMScript.Global.TimeSpan
-  commentId: T:CRMScript.Global.TimeSpan
+- uid: CRMScript.Native.TimeSpan
+  commentId: T:CRMScript.Native.TimeSpan
   isExternal: true
   name: TimeSpan
   nameWithType: TimeSpan
-  fullName: CRMScript.Global.TimeSpan
+  fullName: CRMScript.Native.TimeSpan
